# olist-bi-analytics

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
analysis/: make_charts.py
dbt_olist/: dbt_project.yml  profiles.yml
dbt_olist/models/marts/: _marts.yml  dim_clientes.sql  dim_fecha.sql  dim_productos.sql  dim_vendedores.sql  hechos_items_orden.sql  hechos_ordenes.sql  hechos_resenas.sql
dbt_olist/models/serving/: _serving.yml  mart_desempeno_entrega.sql  mart_ordenes_enriquecidas.sql  mart_ventas_diarias.sql  mart_ventas_por_categoria.sql
dbt_olist/models/staging/: _sources.yml  _staging.yml  stg_clientes.sql  stg_items_orden.sql  stg_ordenes.sql  stg_pagos.sql  stg_productos.sql  stg_resenas.sql  stg_vendedores.sql
docs/: glosario_metricas.md
olist_loader/: loader.py  run.py
sample/: olist_customers_dataset.csv  olist_order_items_dataset.csv  olist_order_payments_dataset.csv  olist_order_reviews_dataset.csv  olist_orders_dataset.csv  olist_products_dataset.csv  olist_sellers_dataset.csv
scripts/: download_data.py  make_sample.py
tests/: test_loader.py
