[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "olist-bi-analytics"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["psycopg[binary]>=3.1", "requests>=2.31"]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.5", "pandas>=2.2", "matplotlib>=3.8", "dbt-core~=1.9.0", "dbt-postgres~=1.9.0"]

[tool.setuptools]
packages = ["olist_loader", "scripts", "analysis"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
